--- a/personal-website-v2/src/App.css
+++ b/personal-website-v2/src/App.css
@@ -2,3 +2,18 @@
   margin: 0;
   padding: 0;
 }
+
+#button-cont{
+  width: 40vw;
+  margin-top: 10vh;
+  margin-left: 3vw;
+  display: flex;
+  justify-content: space-between;
+}
+
+@media screen and (min-width: 1200px){
+  #button-cont{
+    margin-left: 43.5vw;
+    margin-top: 20vh;
+  }
+}
