--- a/personal-website-v2/src/index.css
+++ b/personal-website-v2/src/index.css
@@ -10,3 +10,5 @@ body {
   margin: 0;
   padding: 0;
  }
+
+ @import url('https://fonts.googleapis.com/css2?family=DM+Serif+Text:ital@0;1&family=Inter:wght@100..900&display=swap')
