--- a/personal-website-v2/src/App.css
+++ b/personal-website-v2/src/App.css
@@ -5,7 +5,7 @@
 
 #button-cont{
   width: 40vw;
-  margin-top: 10vh;
+  margin-top: 11.3vh;
   margin-left: 3vw;
   display: flex;
   justify-content: space-between;
@@ -13,7 +13,56 @@
 
 @media screen and (min-width: 1200px){
   #button-cont{
-    margin-left: 43.5vw;
+    margin-left: 43.8vw;
     margin-top: 20vh;
+  }
+}
+
+/* teehee reusing code from last personal-website */
+
+#skill-section{
+  font-family: 'Inter', 'sans-serif';
+  display: flex;
+  padding-top: 1vh;
+  padding-top: 4vh;
+  padding-bottom: 2vh;
+  padding-left: 3vw;
+}
+
+.skill-name{
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #525252;
+  color: white;
+  border-radius: 15px;
+  margin-right: 3vw;
+  opacity: 70%;
+  width: 30vw;
+  padding-bottom: 2vh;
+  height: fit-content;
+  min-height: 23vh;
+}
+
+.skill-name h2{
+  margin-top: 1vh;
+  font-size: 20px;
+  font-weight: 800px;
+}
+
+.skills-cont{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  flex-wrap: wrap;
+  width: 28vw;
+}
+
+@media screen and (min-width: 1200px){
+  .skill-name h2{
+    font-size: 24px;
+    margin-top: 2vh;
+    margin-bottom: 1vh;
   }
 }
