--- a/personal-website-v2/src/components-css/Button.css
+++ b/personal-website-v2/src/components-css/Button.css
@@ -1,5 +1,6 @@
 .button{
-    background-color: #D9D9D9;
+    font-family: 'Inter', 'sans-serif';
+    background-color: #A9A9A9;
     width: 12vw;
     height: 5vh;
     border-radius: 15px;
@@ -14,4 +15,10 @@
 .button:hover{
     background-color: #7B7B7B;
     cursor: pointer;
+    animation: expand 0.5s linear both;
+}
+
+@keyframes expand {
+    0%{width: 12vw; height:5vh}
+    100% {width: 13vw; height: 5vh;}
 }
