--- a/personal-website-v2/src/App.css
+++ b/personal-website-v2/src/App.css
@@ -23,10 +23,18 @@
 #skill-section{
   font-family: 'Inter', 'sans-serif';
   display: flex;
-  padding-top: 1vh;
   padding-top: 4vh;
   padding-bottom: 2vh;
-  padding-left: 3vw;
+  padding-left: 2.5vw;
+}
+
+.skill-name:hover{
+  animation: hover 2s linear both;
+}
+
+@keyframes hover {
+  0%{transform: translateY(0px);}
+  100%{transform: translateY(-10px);}
 }
 
 .skill-name{
@@ -52,6 +60,7 @@
 }
 
 .skills-cont{
+  padding-left: 1vw;
   display: flex;
   flex-direction: row;
   justify-content: center;
