--- a/personal-website-v2/src/components-css/Header.css
+++ b/personal-website-v2/src/components-css/Header.css
@@ -115,6 +115,19 @@
     animation: orbit 5s linear infinite;
 }
 
+/* shoutout is unused, just got too attached to get rid of it*/
+@keyframes shoutout {
+    0% {transform: rotate(0deg);}
+    15% {transform: rotate(12deg);}
+    30% {transform: rotate(-8deg);}
+    45% {transform: rotate(6deg);}
+    60% {transform: rotate(-4deg);}
+    75% {transform: rotate(4deg);}
+    90% {transform: rotate(-2deg);}
+    95% {transform: rotate(2deg);}
+    100% {transform: rotate(0deg);}
+  }
+
 @keyframes orbit {
     0%{transform: rotate(0deg);}
     100%{transform: rotate(360deg);}
