Added Disc functions & Audio.

--- a/personal-website-v2/src/sub-components/Disc.css
+++ b/personal-website-v2/src/sub-components/Disc.css
@@ -6,7 +6,6 @@
     width: 20vw;
     height: 20vw;
     border-radius: 100%;
-    display: flex;
 }
 
 #inner{
@@ -31,4 +30,7 @@
     width: 20vw;
     height: 20vw;
     border-radius: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
