--- a/personal-website-v2/src/sub-components/Music.css
+++ b/personal-website-v2/src/sub-components/Music.css
@@ -6,6 +6,57 @@
     margin: 2vh;
 }
 
+#grey-mid{
+    border-radius: 100%;
+    background-color: #737373;
+    width: 20vw;
+    height: 20vw;
+    position: relative;
+    top: 5vw;
+    left: 3vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#mid{
+    border-radius: 100%;
+    background-color: #282828;
+    width: 2vw;
+    height: 2vw;
+}
+
+#base{
+    border-radius: 100%;
+    background-color: #282828;
+    width: 4vw;
+    height: 4vw;
+    position: relative;
+    top: -15vh;
+    left: 22vw;
+}
+
+#anchor{
+    border-radius: 100%;
+    background-color: #3A3A3A;
+    width: 2vw;
+    height: 2vw;
+    z-index: 101;
+    left: 1vw;
+    position: relative;
+}
+
+#stick{
+    background-color: #D9D9D9;
+    width: 15vw;
+    height: 0.8vh;
+    position: relative;
+    left: -9vw;
+    top: 4vh;
+    rotate: 140deg;
+    z-index: 60;
+}
+
 #cat-dance{
     background-color: #343434;
     width: 30vw;
