--- a/personal-website-v2/src/sub-components/Music.css
+++ b/personal-website-v2/src/sub-components/Music.css
@@ -32,7 +32,7 @@
     width: 4vw;
     height: 4vw;
     position: relative;
-    top: -15vh;
+    top: -30vh;
     left: 22vw;
 }
 
@@ -43,16 +43,17 @@
     height: 2vw;
     z-index: 101;
     left: 1vw;
+    top: 1vh;
     position: relative;
 }
 
 #stick{
     background-color: #D9D9D9;
-    width: 15vw;
+    width: 14vw;
     height: 0.8vh;
     position: relative;
-    left: -9vw;
-    top: 4vh;
+    left: -8vw;
+    top: 8vh;
     rotate: 140deg;
     z-index: 60;
 }
@@ -100,7 +101,7 @@
 }
 
 #volume-img{
-    width: 8%;
+    width: 6%;
     filter: invert();
     padding-left: 2vw;
 }
@@ -129,6 +130,8 @@
 }
 
 #ambient{
+    margin-top: 2vh;
+    width: 20vw;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
