--- a/personal-website-v2/src/sub-components/Toggle.css
+++ b/personal-website-v2/src/sub-components/Toggle.css
@@ -1,10 +1,34 @@
-#toggle-btn{
+.unclicked{
     background-color: #606060;
     width: 3vw;
     height: 3vw;
     border-radius: 5px;
+    transition: 1s;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-#toggle-btn:hover{
+.clicked{
+    background-color: #282828;
+    width: 3vw;
+    height: 3vw;
+    border-radius: 5px;
+    transition: 1s;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#icon{
+    width: 2vw;
+    transition: 1s;
+}
+
+.clicked img{
+    filter: invert();
+}
+
+.clicked:hover, .unclicked:hover{
     cursor: pointer;
 }
